--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -6,9 +6,8 @@ flake8==5.0.4
 ipython>=7.0.1
 isort>=4.3.21, <5.0
 jupyter_client>=5.1, <7.0
-jupyterlab==0.31.1
+jupyterlab>=0.31.1
 jupyter~=1.0
-nb-black==1.0.7
 nbstripout==0.3.3
 pipdeptree==2.0.0
 pre-commit==2.10.1
