--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -13,5 +13,5 @@ pipdeptree==2.0.0
 pre-commit==2.10.1
 protobuf==3.20.1
 pytest-cov==3.0.0
-pytest==7.1.2
-pytest==7.1.2
+pytest-mock==3.10.0
+pytest>=7.1.2
