--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,4 +31,4 @@ exclude = '''
 '''
 include = '\.pyi?$'
 line-length = 79
-target-version = ['py36', 'py37', 'py38']
+target-version = ['py36', 'py37', 'py38', 'py39']
