--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -1,6 +1,7 @@
 version: '3'
 
 services:
+  # --- Service used for local development
   local-dev:
     # Building the local image
     build:
@@ -17,3 +18,25 @@ services:
       - ..:/opt/program
     working_dir: /opt/program
     command: [ "/bin/sleep", "365d" ]
+  #
+  # --- Service for running the API locally
+  api:
+    # Building the local image
+    build:
+      context: ../
+      dockerfile: ./docker/image_analyzer.Dockerfile
+    # Running the local image
+    image: "ai-image-analyzer-api"
+    container_name: "ai-image-analyzer-api"
+    ports:
+      - ${INPUT_APP_PORT:-80}:${OUTPUT_APP_PORT:-80}
+    working_dir: /opt/ml
+    command:
+      [
+        "uvicorn",
+        "src.api.index:app",
+        "--host",
+        "0.0.0.0",
+        "--port",
+        "80"
+      ]
