--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -18,6 +18,8 @@ services:
       - ..:/opt/program
     working_dir: /opt/program
     command: [ "/bin/sleep", "365d" ]
+    ports:
+      - ${INPUT_APP_PORT:-80}:${OUTPUT_APP_PORT:-80}
   #
   # --- Service for running the API locally
   api:
@@ -28,6 +30,8 @@ services:
     # Running the local image
     image: "ai-image-analyzer-api"
     container_name: "ai-image-analyzer-api"
+    volumes:
+      - ..:/opt/ml
     ports:
       - ${INPUT_APP_PORT:-80}:${OUTPUT_APP_PORT:-80}
     working_dir: /opt/ml
@@ -38,5 +42,8 @@ services:
         "--host",
         "0.0.0.0",
         "--port",
-        "80"
+        "80",
+        "--reload",
+        "--reload-dir",
+        "/opt/ml"
       ]
