--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
+-r https://raw.githubusercontent.com/ultralytics/yolov5/master/requirements.txt
 fastapi==0.92.0
 opencv-python==4.7.0.72
 pydantic==1.10.5
 pytube==12.1.2
 streamlit==1.20.0
+torch==2.0.0
+torchvision>=0.15.1
 uvicorn==0.20.0
 validators==0.20.0
