Adding Yolov8 model to Model service

--- a/.isort.cfg
+++ b/.isort.cfg
@@ -2,4 +2,4 @@
 line_length = 79
 multi_line_output = 3
 include_trailing_comma = True
-known_third_party =cv2,fastapi,numpy,pydantic,pytube,streamlit,torch,validators
+known_third_party =cv2,fastapi,numpy,pydantic,pytube,streamlit,torch,ultralytics,validators
