--- a/.isort.cfg
+++ b/.isort.cfg
@@ -2,4 +2,4 @@
 line_length = 79
 multi_line_output = 3
 include_trailing_comma = True
-known_third_party =PIL,cv2,fastapi,numpy,pydantic,pytube,streamlit,torch,ultralytics,validators
+known_third_party =PIL,cv2,fastapi,numpy,pandas,pydantic,pytube,streamlit,torch,ultralytics,validators
