--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ pytube==12.1.2
 streamlit==1.20.0
 torch==2.0.0
 torchvision>=0.15.1
+tqdm==4.65.0
 ultralytics==8.0.57
 uvicorn==0.20.0
 validators==0.20.0
+setuptools==67.6.1
